attach html template to component

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
     <main class="app">
         <h3>RAINBOW</h3>
-        <div class="rainbow"></div>
+        <rainbow></rainbow>
     </main>
 </body>
 
