--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <main class="app">
         <h3>RAINBOW</h3>
         <rainbow></rainbow>
+        <rainbow></rainbow>
     </main>
 </body>
 
