--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <main class="app">
         <rainbow></rainbow>
         <rainbow></rainbow>
+        <my-app>loading...</my-app>
     </main>
 </body>
 
