--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <main class="app">
-        <rainbow></rainbow>
-        <rainbow></rainbow>
+        <!-- <rainbow></rainbow> -->
+        <!-- <rainbow></rainbow> -->
         <my-app>loading...</my-app>
     </main>
 </body>
